Bug 26295 - AArch64: CMASK and DMASK aren't valid DWARF registers
Summary: AArch64: CMASK and DMASK aren't valid DWARF registers
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: tdep (show other bugs)
Version: unknown
: P2 minor
Target Milestone: ---
Assignee: SRINATH PARVATHANENI
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-23 15:32 UTC by Alan Hayward
Modified: 2022-05-18 10:27 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
Project(s) to access:
ssh public key:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alan Hayward 2020-07-23 15:32:44 UTC
AArch64 PAC support added AARCH64_DWARF_PAUTH_DMASK and AARCH64_DWARF_PAUTH_CMASK.

These registers never made it in to a released version of "DWARF for the Arm 64-bit Architecture". They are not required, are not explicitly used by GDB and can safely be removed.

Note that the cmask and dmask architecture registers are required. AARCH64_DWARF_PAUTH_RA_STATE is also required.

To fix:
*Remove defines for AARCH64_DWARF_PAUTH_DMASK and AARCH64_DWARF_PAUTH_CMASK.
*Remove usage in aarch64_dwarf_reg_to_regnum()
*Possibly correct usage of DWARF2_FRAME_REG_SAME_VALUE in aarch64_dwarf2_frame_init_reg()
*Test with binaries compiled with PAC on a PAC enabled box.

Leaving this code in is probably harmless, but it should be tidied up.
Comment 1 Luis Machado 2022-05-18 10:27:19 UTC
Unused code removed.